--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "mysql2": "^3.14.1",
-    "next": "15.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.3.6",
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-toastify": "^11.0.5"
